--- a/templates/newCategory.html
+++ b/templates/newCategory.html
@@ -14,6 +14,8 @@
     <div class="field">
         <label>Name</label>
         <input type='text' size='250' name='name'>
+        <label>Image Link</label>
+        <input type='text' size='250' name='img'>
     </div>
     <button class="ui button" type="submit">Create New Category</button>
 </form>
