--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -12,6 +12,8 @@
     <div class="field">
         <label>Name</label>
         <input type='text' size='250' name='name' placeholder='{{category.name}}'>
+        <label>Image Link</label>
+        <input type='text' size='250' name='img' placeholder='{{category.img}}'>
     </div>
     <button class="ui button" type="submit">Edit Category Name</button>
 </form>
