--- a/templates/itemlist.html
+++ b/templates/itemlist.html
@@ -26,6 +26,7 @@
                 <div class="header">{{item.name}}</div>
             </div>
             <h4 class="ui sub header">{{item.time_created}}</h4>
+            <h4 class="ui sub header">{{item.category.name}}</h4>
             <div class="event">
                 <div class="content">
                     <div class="summary">
