added login template

--- a/templates/deleteCategory.html
+++ b/templates/deleteCategory.html
@@ -12,8 +12,9 @@
     <div class="field">
         <label>Confirm Delete Category {{category.name}} ?</label>
     </div>
-    <button class="ui button" type='submit'>Delete</button>
+    <button class="ui basic red button" type='submit'>Delete</button>
 
 </form>
 <a class="ui button" href='{{url_for('home')}}'>Cancel</a>
+</div>
 {% endblock %}
