--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -12,7 +12,7 @@
     <div class="field">
         <label>Confirm Delete Item {{item.name}} from {{category_name}}?</label>
     </div>
-    <button class="ui button" type='submit'>Delete</button>
+    <button class="ui basic red button" type='submit'>Delete</button>
 
 </form>
 <a class="ui button" href='{{url_for('itemlist', category_id = item.category_id)}}'>Cancel</a>
