--- a/templates/headers.html
+++ b/templates/headers.html
@@ -16,10 +16,7 @@
       </div>
     </div>-->
     <div class="item">
-        <div class="ui primary button">Sign up</div>
-    </div>
-    <div class="item">
-        <div class="ui primary button">Log-in</div>
+        <a href="{{url_for('showLogin')}}" class="ui primary button">Log-in</a>
     </div>
   </div>
 </div>
