--- a/templates/headers.html
+++ b/templates/headers.html
@@ -19,7 +19,8 @@
       {% if 'username' not in session %}
         <a href="{{url_for('showLogin')}}" class="ui primary button">Log-in</a>
       {% else %}
-        <a href="{{url_for('gdisconnect')}}" class="ui primary button">Log-out</a>
+        <!--<a href="{{url_for('gdisconnect')}}" class="ui primary button">Log-out</a>-->
+        <a href="{{url_for('fbdisconnect')}}" class="ui primary button">Log-out</a>
       {% endif %}
     </div>
     {% if 'username' in session %}
