--- a/templates/login.html
+++ b/templates/login.html
@@ -94,10 +94,8 @@
         </br>
         <div id="result"></div>
         </br>
-        <a class="ui button" href='{{url_for('home')}}'>Cancel</a>
+        <a class="ui button" href='{{url_for('home')}}'>Back</a>
     </div>
-    <div class='content'>State = {{STATE}}</div>
-    <div class='content'>Session State = {{session['state']}}</div>
 </div>
 <!--GOOGLE Login-->
 <script>
