--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,9 @@
 <div class = 'ui centered header'>
 
     <h2>Categories</h2>
-    <a href="{{url_for('newCategory')}}">Create New Category</a>
+    {% if 'username' in session %}
+      <a href="{{url_for('newCategory')}}">Create New Category</a>
+    {% endif %}
 </div>
 
 </br>
@@ -23,18 +25,23 @@
 <div class='content'>
     {% for category in categories %}
         <div class = 'one column centered grid ui card grid'>
-            <div class="image">
+            <div class="image" href="{{url_for('itemlist', category_id = category.id)}}">
               <img src="{{category.img}}">
             </div>
             <div class="content">
                 <a href="{{url_for('itemlist', category_id = category.id)}}" class="header">{{category.name}}</a>
             </div>
+            <div class="meta">
+              <span>Author: {{category.user.name}}</span>
+            </div>
+            {% if session['email'] ==  category.user.email %}
             <div class="extra content">
               <div class="ui two buttons">
                 <a href="{{url_for('editCategory', category_id = category.id)}}" class="ui basic green button">Edit</a>
                 <a href="{{url_for('deleteCategory', category_id = category.id)}}" class="ui basic red button">Delete</a>
               </div>
             </div>
+            {% endif %}
         </div>
     {% endfor %}
 </div>
