edited itemlist JSON format

--- a/templates/itemlist.html
+++ b/templates/itemlist.html
@@ -27,7 +27,7 @@
                 <div class="header">{{item.name}}</div>
             </div>
             <div class="meta">
-              <span>Author: {{item.category.user.name}}</span>
+              <span>Author: {{item.user.name}}</span>
             </div>
             <h4 class="ui sub header">{{item.category.name}}</h4>
             <div class="event">
